<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:orientation="vertical" >



    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:background="#3ba0e2" >

        <ImageView

            android:id="@+id/imageView1"

            android:layout_width="96dp"

            android:layout_height="96dp"

            android:src="@drawable/icone_bd"

            android:contentDescription="@string/todo" />

        <TextView

            android:id="@+id/textView1"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:textAppearance="?android:attr/textAppearanceLarge"

            />



        <LinearLayout

            android:id="@+id/layoutCorFundo"

            android:layout_width="fill_parent"

            android:layout_height="match_parent"

            android:background="#E5BE40"

            android:gravity="center" >



            <TextView

                android:id="@+id/textView2"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/trabalhando_com_banco_de_dados_no_android"

                android:textAppearance="?android:attr/textAppearanceLarge"

                android:textColor="#546E7A" />

        </LinearLayout>

    </LinearLayout>



    <LinearLayout

        android:id="@+id/layoutImagemFundo"

        android:layout_width="match_parent"

        android:layout_height="fill_parent"

        android:orientation="vertical" >



        <TextView

            android:id="@+id/textView3"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/escolha_uma_das_op_es_abaixo"

            android:textAppearance="?android:attr/textAppearanceLarge"

            android:textSize="20sp" />



        <LinearLayout

            android:layout_width="match_parent"

            android:layout_height="fill_parent"

            android:gravity="center"

            android:orientation="vertical" >



            <Button

                android:id="@+id/btcriarbanco"

                android:layout_width="200dp"

                android:layout_height="wrap_content"

                android:text="@string/criar_banco_de_dados" />



            <Button

                android:id="@+id/btcadastrardados"

                android:layout_width="200dp"

                android:layout_height="wrap_content"

                android:text="@string/cadastrar_dados"

                tools:ignore="TextSizeCheck" />



        </LinearLayout>

    </LinearLayout>

</LinearLayout>